--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
 
     <!-- start footer image section  -->
     <!--  -->
-    <div class="container d-flex justify-content-center align-items-center">
+    <div class="container d-flex justify-content-center align-items-center" id="contact">
 	
         <!-- // SVG
                         from: https://www.freepik.com/free-vector/new-message-concept-landing-page_5777076.htm 
